Refactor: 리턴값 수정